// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-card> Component add clickable functionality 1`] = `
<bolt-card url="#!"
           bolt-component
>
  <div data-href="#!"
       class="c-bolt-card"
  >
    <div class="c-bolt-card__media">
      <a href="#!">
        <bolt-image src="/fixtures/landscape-16x9-mountains.jpg"
                    srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                    alt="Anthem Video"
                    sizes="auto"
                    ratio="1151/638"
                    no-lazy
        >
          <bolt-ratio ratio="1151/638">
            <replace-with-children class="c-bolt-ratio"
                                   style="padding-bottom: calc((638 / 1151) * 100%); --aspect-ratio: 1.8040752351097;"
            >
              <img class="c-bolt-image__image-placeholder"
                   alt="Anthem Video"
                   sizes="auto"
                   src="data:image/jpeg;base64,/9j/2wBDAAYEBQYFBAYGBQYHBwYIChAKCgkJChQODwwQFxQYGBcUFhYaHSUfGhsjHBYWICwgIyYnKSopGR8tMC0oMCUoKSj/2wBDAQcHBwoIChMKChMoGhYaKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCj/wAARCAANABgDASIAAhEBAxEB/8QAGAAAAwEBAAAAAAAAAAAAAAAAAAUIBAf/xAAiEAABAwMEAwEAAAAAAAAAAAABAgMEABEhBQcSMRRBwWH/xAAWAQEBAQAAAAAAAAAAAAAAAAAGAQP/xAAeEQABBAEFAAAAAAAAAAAAAAABAAIDESEEFDFRsf/aAAwDAQACEQMRAD8AdaNupMQ8vyZD7x9AgfDanru58goKjFZIVhILxuD+1L8fUZCHEjmTYYz1WlWrykpJ5nPee6VHSxOzSNB07cXa7vM3JkKK+cJCyBezTuftFTxI1N9TgVcBQ9jFFTbx9LUCcjnxf//Z"
              >
              <img class="c-bolt-image__image"
                   alt="Anthem Video"
                   srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                   sizes="auto"
                   src="/fixtures/landscape-16x9-mountains.jpg"
              >
            </replace-with-children>
          </bolt-ratio>
        </bolt-image>
      </a>
    </div>
    <div class="c-bolt-card__body">
      <p class="c-bolt-eyebrow c-bolt-eyebrow--regular">
        Video
      </p>
      <h3 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--large">
        Anthem: Service Desktop
      </h3>
      <p class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--medium">
        Anthem debuts its next-generation service desktop, driving frictionless customer experiences.
      </p>
    </div>
    <div class="c-bolt-card__footer">
      <div class="c-bolt-card__footer-item">
        <bolt-button size="medium"
                     color="text"
                     width="full"
                     border-radius="regular"
                     align="start"
                     transform="none"
                     url="#!"
        >
          <a href="#!"
             class="c-bolt-button c-bolt-button--medium c-bolt-button--text c-bolt-button--full c-bolt-button--border-radius-regular c-bolt-button--start"
             is="shadow-root"
          >
            <replace-with-children class="c-bolt-button__icon is-empty">
            </replace-with-children>
            <replace-with-children class="c-bolt-button__item">
              Get the report
            </replace-with-children>
            <replace-with-children class="c-bolt-button__icon">
              <bolt-icon slot="after"
                         name="chevron-right"
              >
              </bolt-icon>
            </replace-with-children>
          </a>
        </bolt-button>
      </div>
    </div>
  </div>
</bolt-card>
`;

exports[`<bolt-card> Component basic usage 1`] = `
<bolt-card bolt-component>
  <div class="c-bolt-card">
    <div class="c-bolt-card__media">
      <bolt-image src="/fixtures/landscape-16x9-mountains.jpg"
                  srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                  alt="Anthem Video"
                  sizes="auto"
                  ratio="1151/638"
                  no-lazy
      >
        <bolt-ratio ratio="1151/638">
          <replace-with-children class="c-bolt-ratio"
                                 style="padding-bottom: calc((638 / 1151) * 100%); --aspect-ratio: 1.8040752351097;"
          >
            <img class="c-bolt-image__image-placeholder"
                 alt="Anthem Video"
                 sizes="auto"
                 src="data:image/jpeg;base64,/9j/2wBDAAYEBQYFBAYGBQYHBwYIChAKCgkJChQODwwQFxQYGBcUFhYaHSUfGhsjHBYWICwgIyYnKSopGR8tMC0oMCUoKSj/2wBDAQcHBwoIChMKChMoGhYaKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCj/wAARCAANABgDASIAAhEBAxEB/8QAGAAAAwEBAAAAAAAAAAAAAAAAAAUIBAf/xAAiEAABAwMEAwEAAAAAAAAAAAABAgMEABEhBQcSMRRBwWH/xAAWAQEBAQAAAAAAAAAAAAAAAAAGAQP/xAAeEQABBAEFAAAAAAAAAAAAAAABAAIDESEEFDFRsf/aAAwDAQACEQMRAD8AdaNupMQ8vyZD7x9AgfDanru58goKjFZIVhILxuD+1L8fUZCHEjmTYYz1WlWrykpJ5nPee6VHSxOzSNB07cXa7vM3JkKK+cJCyBezTuftFTxI1N9TgVcBQ9jFFTbx9LUCcjnxf//Z"
            >
            <img class="c-bolt-image__image"
                 alt="Anthem Video"
                 srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                 sizes="auto"
                 src="/fixtures/landscape-16x9-mountains.jpg"
            >
          </replace-with-children>
        </bolt-ratio>
      </bolt-image>
    </div>
    <div class="c-bolt-card__body">
      <p class="c-bolt-eyebrow c-bolt-eyebrow--regular">
        Video
      </p>
      <h3 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--large">
        Anthem: Service Desktop
      </h3>
      <p class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--medium">
        Anthem debuts its next-generation service desktop, driving frictionless customer experiences.
      </p>
    </div>
    <div class="c-bolt-card__footer">
      <div class="c-bolt-card__footer-item">
        <bolt-button size="medium"
                     color="text"
                     width="full"
                     border-radius="regular"
                     align="start"
                     transform="none"
                     url="#!"
        >
          <a href="#!"
             class="c-bolt-button c-bolt-button--medium c-bolt-button--text c-bolt-button--full c-bolt-button--border-radius-regular c-bolt-button--start"
             is="shadow-root"
          >
            <replace-with-children class="c-bolt-button__icon is-empty">
            </replace-with-children>
            <replace-with-children class="c-bolt-button__item">
              Get the report
            </replace-with-children>
            <replace-with-children class="c-bolt-button__icon">
              <bolt-icon slot="after"
                         name="chevron-right"
              >
              </bolt-icon>
            </replace-with-children>
          </a>
        </bolt-button>
      </div>
    </div>
  </div>
</bolt-card>
`;

exports[`<bolt-card> Component content tag variations: article 1`] = `
<bolt-card bolt-component>
  <div class="c-bolt-card">
    <div class="c-bolt-card__media">
      <bolt-image src="/fixtures/landscape-16x9-mountains.jpg"
                  srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                  alt="Anthem Video"
                  sizes="auto"
                  ratio="1151/638"
                  no-lazy
      >
        <bolt-ratio ratio="1151/638">
          <replace-with-children class="c-bolt-ratio"
                                 style="padding-bottom: calc((638 / 1151) * 100%); --aspect-ratio: 1.8040752351097;"
          >
            <img class="c-bolt-image__image-placeholder"
                 alt="Anthem Video"
                 sizes="auto"
                 src="data:image/jpeg;base64,/9j/2wBDAAYEBQYFBAYGBQYHBwYIChAKCgkJChQODwwQFxQYGBcUFhYaHSUfGhsjHBYWICwgIyYnKSopGR8tMC0oMCUoKSj/2wBDAQcHBwoIChMKChMoGhYaKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCj/wAARCAANABgDASIAAhEBAxEB/8QAGAAAAwEBAAAAAAAAAAAAAAAAAAUIBAf/xAAiEAABAwMEAwEAAAAAAAAAAAABAgMEABEhBQcSMRRBwWH/xAAWAQEBAQAAAAAAAAAAAAAAAAAGAQP/xAAeEQABBAEFAAAAAAAAAAAAAAABAAIDESEEFDFRsf/aAAwDAQACEQMRAD8AdaNupMQ8vyZD7x9AgfDanru58goKjFZIVhILxuD+1L8fUZCHEjmTYYz1WlWrykpJ5nPee6VHSxOzSNB07cXa7vM3JkKK+cJCyBezTuftFTxI1N9TgVcBQ9jFFTbx9LUCcjnxf//Z"
            >
            <img class="c-bolt-image__image"
                 alt="Anthem Video"
                 srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                 sizes="auto"
                 src="/fixtures/landscape-16x9-mountains.jpg"
            >
          </replace-with-children>
        </bolt-ratio>
      </bolt-image>
    </div>
    <article class="c-bolt-card__body">
      <p class="c-bolt-eyebrow c-bolt-eyebrow--regular">
        Video
      </p>
      <h3 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--large">
        Anthem: Service Desktop
      </h3>
      <p class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--medium">
        Anthem debuts its next-generation service desktop, driving frictionless customer experiences.
      </p>
    </article>
    <div class="c-bolt-card__footer">
      <div class="c-bolt-card__footer-item">
        <bolt-button size="medium"
                     color="text"
                     width="full"
                     border-radius="regular"
                     align="start"
                     transform="none"
                     url="#!"
        >
          <a href="#!"
             class="c-bolt-button c-bolt-button--medium c-bolt-button--text c-bolt-button--full c-bolt-button--border-radius-regular c-bolt-button--start"
             is="shadow-root"
          >
            <replace-with-children class="c-bolt-button__icon is-empty">
            </replace-with-children>
            <replace-with-children class="c-bolt-button__item">
              Get the report
            </replace-with-children>
            <replace-with-children class="c-bolt-button__icon">
              <bolt-icon slot="after"
                         name="chevron-right"
              >
              </bolt-icon>
            </replace-with-children>
          </a>
        </bolt-button>
      </div>
    </div>
  </div>
</bolt-card>
`;

exports[`<bolt-card> Component content tag variations: div 1`] = `
<bolt-card bolt-component>
  <div class="c-bolt-card">
    <div class="c-bolt-card__media">
      <bolt-image src="/fixtures/landscape-16x9-mountains.jpg"
                  srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                  alt="Anthem Video"
                  sizes="auto"
                  ratio="1151/638"
                  no-lazy
      >
        <bolt-ratio ratio="1151/638">
          <replace-with-children class="c-bolt-ratio"
                                 style="padding-bottom: calc((638 / 1151) * 100%); --aspect-ratio: 1.8040752351097;"
          >
            <img class="c-bolt-image__image-placeholder"
                 alt="Anthem Video"
                 sizes="auto"
                 src="data:image/jpeg;base64,/9j/2wBDAAYEBQYFBAYGBQYHBwYIChAKCgkJChQODwwQFxQYGBcUFhYaHSUfGhsjHBYWICwgIyYnKSopGR8tMC0oMCUoKSj/2wBDAQcHBwoIChMKChMoGhYaKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCj/wAARCAANABgDASIAAhEBAxEB/8QAGAAAAwEBAAAAAAAAAAAAAAAAAAUIBAf/xAAiEAABAwMEAwEAAAAAAAAAAAABAgMEABEhBQcSMRRBwWH/xAAWAQEBAQAAAAAAAAAAAAAAAAAGAQP/xAAeEQABBAEFAAAAAAAAAAAAAAABAAIDESEEFDFRsf/aAAwDAQACEQMRAD8AdaNupMQ8vyZD7x9AgfDanru58goKjFZIVhILxuD+1L8fUZCHEjmTYYz1WlWrykpJ5nPee6VHSxOzSNB07cXa7vM3JkKK+cJCyBezTuftFTxI1N9TgVcBQ9jFFTbx9LUCcjnxf//Z"
            >
            <img class="c-bolt-image__image"
                 alt="Anthem Video"
                 srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                 sizes="auto"
                 src="/fixtures/landscape-16x9-mountains.jpg"
            >
          </replace-with-children>
        </bolt-ratio>
      </bolt-image>
    </div>
    <div class="c-bolt-card__body">
      <p class="c-bolt-eyebrow c-bolt-eyebrow--regular">
        Video
      </p>
      <h3 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--large">
        Anthem: Service Desktop
      </h3>
      <p class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--medium">
        Anthem debuts its next-generation service desktop, driving frictionless customer experiences.
      </p>
    </div>
    <div class="c-bolt-card__footer">
      <div class="c-bolt-card__footer-item">
        <bolt-button size="medium"
                     color="text"
                     width="full"
                     border-radius="regular"
                     align="start"
                     transform="none"
                     url="#!"
        >
          <a href="#!"
             class="c-bolt-button c-bolt-button--medium c-bolt-button--text c-bolt-button--full c-bolt-button--border-radius-regular c-bolt-button--start"
             is="shadow-root"
          >
            <replace-with-children class="c-bolt-button__icon is-empty">
            </replace-with-children>
            <replace-with-children class="c-bolt-button__item">
              Get the report
            </replace-with-children>
            <replace-with-children class="c-bolt-button__icon">
              <bolt-icon slot="after"
                         name="chevron-right"
              >
              </bolt-icon>
            </replace-with-children>
          </a>
        </bolt-button>
      </div>
    </div>
  </div>
</bolt-card>
`;

exports[`<bolt-card> Component content tag variations: figcaption 1`] = `
<bolt-card bolt-component>
  <div class="c-bolt-card">
    <div class="c-bolt-card__media">
      <bolt-image src="/fixtures/landscape-16x9-mountains.jpg"
                  srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                  alt="Anthem Video"
                  sizes="auto"
                  ratio="1151/638"
                  no-lazy
      >
        <bolt-ratio ratio="1151/638">
          <replace-with-children class="c-bolt-ratio"
                                 style="padding-bottom: calc((638 / 1151) * 100%); --aspect-ratio: 1.8040752351097;"
          >
            <img class="c-bolt-image__image-placeholder"
                 alt="Anthem Video"
                 sizes="auto"
                 src="data:image/jpeg;base64,/9j/2wBDAAYEBQYFBAYGBQYHBwYIChAKCgkJChQODwwQFxQYGBcUFhYaHSUfGhsjHBYWICwgIyYnKSopGR8tMC0oMCUoKSj/2wBDAQcHBwoIChMKChMoGhYaKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCj/wAARCAANABgDASIAAhEBAxEB/8QAGAAAAwEBAAAAAAAAAAAAAAAAAAUIBAf/xAAiEAABAwMEAwEAAAAAAAAAAAABAgMEABEhBQcSMRRBwWH/xAAWAQEBAQAAAAAAAAAAAAAAAAAGAQP/xAAeEQABBAEFAAAAAAAAAAAAAAABAAIDESEEFDFRsf/aAAwDAQACEQMRAD8AdaNupMQ8vyZD7x9AgfDanru58goKjFZIVhILxuD+1L8fUZCHEjmTYYz1WlWrykpJ5nPee6VHSxOzSNB07cXa7vM3JkKK+cJCyBezTuftFTxI1N9TgVcBQ9jFFTbx9LUCcjnxf//Z"
            >
            <img class="c-bolt-image__image"
                 alt="Anthem Video"
                 srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                 sizes="auto"
                 src="/fixtures/landscape-16x9-mountains.jpg"
            >
          </replace-with-children>
        </bolt-ratio>
      </bolt-image>
    </div>
    <figcaption class="c-bolt-card__body">
      <p class="c-bolt-eyebrow c-bolt-eyebrow--regular">
        Video
      </p>
      <h3 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--large">
        Anthem: Service Desktop
      </h3>
      <p class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--medium">
        Anthem debuts its next-generation service desktop, driving frictionless customer experiences.
      </p>
    </figcaption>
    <div class="c-bolt-card__footer">
      <div class="c-bolt-card__footer-item">
        <bolt-button size="medium"
                     color="text"
                     width="full"
                     border-radius="regular"
                     align="start"
                     transform="none"
                     url="#!"
        >
          <a href="#!"
             class="c-bolt-button c-bolt-button--medium c-bolt-button--text c-bolt-button--full c-bolt-button--border-radius-regular c-bolt-button--start"
             is="shadow-root"
          >
            <replace-with-children class="c-bolt-button__icon is-empty">
            </replace-with-children>
            <replace-with-children class="c-bolt-button__item">
              Get the report
            </replace-with-children>
            <replace-with-children class="c-bolt-button__icon">
              <bolt-icon slot="after"
                         name="chevron-right"
              >
              </bolt-icon>
            </replace-with-children>
          </a>
        </bolt-button>
      </div>
    </div>
  </div>
</bolt-card>
`;

exports[`<bolt-card> Component content tag variations: section 1`] = `
<bolt-card bolt-component>
  <div class="c-bolt-card">
    <div class="c-bolt-card__media">
      <bolt-image src="/fixtures/landscape-16x9-mountains.jpg"
                  srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                  alt="Anthem Video"
                  sizes="auto"
                  ratio="1151/638"
                  no-lazy
      >
        <bolt-ratio ratio="1151/638">
          <replace-with-children class="c-bolt-ratio"
                                 style="padding-bottom: calc((638 / 1151) * 100%); --aspect-ratio: 1.8040752351097;"
          >
            <img class="c-bolt-image__image-placeholder"
                 alt="Anthem Video"
                 sizes="auto"
                 src="data:image/jpeg;base64,/9j/2wBDAAYEBQYFBAYGBQYHBwYIChAKCgkJChQODwwQFxQYGBcUFhYaHSUfGhsjHBYWICwgIyYnKSopGR8tMC0oMCUoKSj/2wBDAQcHBwoIChMKChMoGhYaKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCj/wAARCAANABgDASIAAhEBAxEB/8QAGAAAAwEBAAAAAAAAAAAAAAAAAAUIBAf/xAAiEAABAwMEAwEAAAAAAAAAAAABAgMEABEhBQcSMRRBwWH/xAAWAQEBAQAAAAAAAAAAAAAAAAAGAQP/xAAeEQABBAEFAAAAAAAAAAAAAAABAAIDESEEFDFRsf/aAAwDAQACEQMRAD8AdaNupMQ8vyZD7x9AgfDanru58goKjFZIVhILxuD+1L8fUZCHEjmTYYz1WlWrykpJ5nPee6VHSxOzSNB07cXa7vM3JkKK+cJCyBezTuftFTxI1N9TgVcBQ9jFFTbx9LUCcjnxf//Z"
            >
            <img class="c-bolt-image__image"
                 alt="Anthem Video"
                 srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                 sizes="auto"
                 src="/fixtures/landscape-16x9-mountains.jpg"
            >
          </replace-with-children>
        </bolt-ratio>
      </bolt-image>
    </div>
    <section class="c-bolt-card__body">
      <p class="c-bolt-eyebrow c-bolt-eyebrow--regular">
        Video
      </p>
      <h3 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--large">
        Anthem: Service Desktop
      </h3>
      <p class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--medium">
        Anthem debuts its next-generation service desktop, driving frictionless customer experiences.
      </p>
    </section>
    <div class="c-bolt-card__footer">
      <div class="c-bolt-card__footer-item">
        <bolt-button size="medium"
                     color="text"
                     width="full"
                     border-radius="regular"
                     align="start"
                     transform="none"
                     url="#!"
        >
          <a href="#!"
             class="c-bolt-button c-bolt-button--medium c-bolt-button--text c-bolt-button--full c-bolt-button--border-radius-regular c-bolt-button--start"
             is="shadow-root"
          >
            <replace-with-children class="c-bolt-button__icon is-empty">
            </replace-with-children>
            <replace-with-children class="c-bolt-button__item">
              Get the report
            </replace-with-children>
            <replace-with-children class="c-bolt-button__icon">
              <bolt-icon slot="after"
                         name="chevron-right"
              >
              </bolt-icon>
            </replace-with-children>
          </a>
        </bolt-button>
      </div>
    </div>
  </div>
</bolt-card>
`;

exports[`<bolt-card> Component only text 1`] = `
<bolt-card bolt-component>
  <div class="c-bolt-card">
    <div class="c-bolt-card__media">
    </div>
    <div class="c-bolt-card__body">
      <h3 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--large">
        Anthem: Service Desktop
      </h3>
      <p class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--medium">
        Anthem debuts its next-generation service desktop, driving frictionless customer experiences.
      </p>
    </div>
    <div class="c-bolt-card__footer">
    </div>
  </div>
</bolt-card>
`;

exports[`<bolt-card> Component tag variations: article 1`] = `
<bolt-card bolt-component>
  <article class="c-bolt-card">
    <div class="c-bolt-card__media">
      <bolt-image src="/fixtures/landscape-16x9-mountains.jpg"
                  srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                  alt="Anthem Video"
                  sizes="auto"
                  ratio="1151/638"
                  no-lazy
      >
        <bolt-ratio ratio="1151/638">
          <replace-with-children class="c-bolt-ratio"
                                 style="padding-bottom: calc((638 / 1151) * 100%); --aspect-ratio: 1.8040752351097;"
          >
            <img class="c-bolt-image__image-placeholder"
                 alt="Anthem Video"
                 sizes="auto"
                 src="data:image/jpeg;base64,/9j/2wBDAAYEBQYFBAYGBQYHBwYIChAKCgkJChQODwwQFxQYGBcUFhYaHSUfGhsjHBYWICwgIyYnKSopGR8tMC0oMCUoKSj/2wBDAQcHBwoIChMKChMoGhYaKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCj/wAARCAANABgDASIAAhEBAxEB/8QAGAAAAwEBAAAAAAAAAAAAAAAAAAUIBAf/xAAiEAABAwMEAwEAAAAAAAAAAAABAgMEABEhBQcSMRRBwWH/xAAWAQEBAQAAAAAAAAAAAAAAAAAGAQP/xAAeEQABBAEFAAAAAAAAAAAAAAABAAIDESEEFDFRsf/aAAwDAQACEQMRAD8AdaNupMQ8vyZD7x9AgfDanru58goKjFZIVhILxuD+1L8fUZCHEjmTYYz1WlWrykpJ5nPee6VHSxOzSNB07cXa7vM3JkKK+cJCyBezTuftFTxI1N9TgVcBQ9jFFTbx9LUCcjnxf//Z"
            >
            <img class="c-bolt-image__image"
                 alt="Anthem Video"
                 srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                 sizes="auto"
                 src="/fixtures/landscape-16x9-mountains.jpg"
            >
          </replace-with-children>
        </bolt-ratio>
      </bolt-image>
    </div>
    <div class="c-bolt-card__body">
      <p class="c-bolt-eyebrow c-bolt-eyebrow--regular">
        Video
      </p>
      <h3 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--large">
        Anthem: Service Desktop
      </h3>
      <p class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--medium">
        Anthem debuts its next-generation service desktop, driving frictionless customer experiences.
      </p>
    </div>
    <div class="c-bolt-card__footer">
      <div class="c-bolt-card__footer-item">
        <bolt-button size="medium"
                     color="text"
                     width="full"
                     border-radius="regular"
                     align="start"
                     transform="none"
                     url="#!"
        >
          <a href="#!"
             class="c-bolt-button c-bolt-button--medium c-bolt-button--text c-bolt-button--full c-bolt-button--border-radius-regular c-bolt-button--start"
             is="shadow-root"
          >
            <replace-with-children class="c-bolt-button__icon is-empty">
            </replace-with-children>
            <replace-with-children class="c-bolt-button__item">
              Get the report
            </replace-with-children>
            <replace-with-children class="c-bolt-button__icon">
              <bolt-icon slot="after"
                         name="chevron-right"
              >
              </bolt-icon>
            </replace-with-children>
          </a>
        </bolt-button>
      </div>
    </div>
  </article>
</bolt-card>
`;

exports[`<bolt-card> Component tag variations: div 1`] = `
<bolt-card bolt-component>
  <div class="c-bolt-card">
    <div class="c-bolt-card__media">
      <bolt-image src="/fixtures/landscape-16x9-mountains.jpg"
                  srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                  alt="Anthem Video"
                  sizes="auto"
                  ratio="1151/638"
                  no-lazy
      >
        <bolt-ratio ratio="1151/638">
          <replace-with-children class="c-bolt-ratio"
                                 style="padding-bottom: calc((638 / 1151) * 100%); --aspect-ratio: 1.8040752351097;"
          >
            <img class="c-bolt-image__image-placeholder"
                 alt="Anthem Video"
                 sizes="auto"
                 src="data:image/jpeg;base64,/9j/2wBDAAYEBQYFBAYGBQYHBwYIChAKCgkJChQODwwQFxQYGBcUFhYaHSUfGhsjHBYWICwgIyYnKSopGR8tMC0oMCUoKSj/2wBDAQcHBwoIChMKChMoGhYaKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCj/wAARCAANABgDASIAAhEBAxEB/8QAGAAAAwEBAAAAAAAAAAAAAAAAAAUIBAf/xAAiEAABAwMEAwEAAAAAAAAAAAABAgMEABEhBQcSMRRBwWH/xAAWAQEBAQAAAAAAAAAAAAAAAAAGAQP/xAAeEQABBAEFAAAAAAAAAAAAAAABAAIDESEEFDFRsf/aAAwDAQACEQMRAD8AdaNupMQ8vyZD7x9AgfDanru58goKjFZIVhILxuD+1L8fUZCHEjmTYYz1WlWrykpJ5nPee6VHSxOzSNB07cXa7vM3JkKK+cJCyBezTuftFTxI1N9TgVcBQ9jFFTbx9LUCcjnxf//Z"
            >
            <img class="c-bolt-image__image"
                 alt="Anthem Video"
                 srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                 sizes="auto"
                 src="/fixtures/landscape-16x9-mountains.jpg"
            >
          </replace-with-children>
        </bolt-ratio>
      </bolt-image>
    </div>
    <div class="c-bolt-card__body">
      <p class="c-bolt-eyebrow c-bolt-eyebrow--regular">
        Video
      </p>
      <h3 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--large">
        Anthem: Service Desktop
      </h3>
      <p class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--medium">
        Anthem debuts its next-generation service desktop, driving frictionless customer experiences.
      </p>
    </div>
    <div class="c-bolt-card__footer">
      <div class="c-bolt-card__footer-item">
        <bolt-button size="medium"
                     color="text"
                     width="full"
                     border-radius="regular"
                     align="start"
                     transform="none"
                     url="#!"
        >
          <a href="#!"
             class="c-bolt-button c-bolt-button--medium c-bolt-button--text c-bolt-button--full c-bolt-button--border-radius-regular c-bolt-button--start"
             is="shadow-root"
          >
            <replace-with-children class="c-bolt-button__icon is-empty">
            </replace-with-children>
            <replace-with-children class="c-bolt-button__item">
              Get the report
            </replace-with-children>
            <replace-with-children class="c-bolt-button__icon">
              <bolt-icon slot="after"
                         name="chevron-right"
              >
              </bolt-icon>
            </replace-with-children>
          </a>
        </bolt-button>
      </div>
    </div>
  </div>
</bolt-card>
`;

exports[`<bolt-card> Component tag variations: figure 1`] = `
<bolt-card bolt-component>
  <figure class="c-bolt-card">
    <div class="c-bolt-card__media">
      <bolt-image src="/fixtures/landscape-16x9-mountains.jpg"
                  srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                  alt="Anthem Video"
                  sizes="auto"
                  ratio="1151/638"
                  no-lazy
      >
        <bolt-ratio ratio="1151/638">
          <replace-with-children class="c-bolt-ratio"
                                 style="padding-bottom: calc((638 / 1151) * 100%); --aspect-ratio: 1.8040752351097;"
          >
            <img class="c-bolt-image__image-placeholder"
                 alt="Anthem Video"
                 sizes="auto"
                 src="data:image/jpeg;base64,/9j/2wBDAAYEBQYFBAYGBQYHBwYIChAKCgkJChQODwwQFxQYGBcUFhYaHSUfGhsjHBYWICwgIyYnKSopGR8tMC0oMCUoKSj/2wBDAQcHBwoIChMKChMoGhYaKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCj/wAARCAANABgDASIAAhEBAxEB/8QAGAAAAwEBAAAAAAAAAAAAAAAAAAUIBAf/xAAiEAABAwMEAwEAAAAAAAAAAAABAgMEABEhBQcSMRRBwWH/xAAWAQEBAQAAAAAAAAAAAAAAAAAGAQP/xAAeEQABBAEFAAAAAAAAAAAAAAABAAIDESEEFDFRsf/aAAwDAQACEQMRAD8AdaNupMQ8vyZD7x9AgfDanru58goKjFZIVhILxuD+1L8fUZCHEjmTYYz1WlWrykpJ5nPee6VHSxOzSNB07cXa7vM3JkKK+cJCyBezTuftFTxI1N9TgVcBQ9jFFTbx9LUCcjnxf//Z"
            >
            <img class="c-bolt-image__image"
                 alt="Anthem Video"
                 srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                 sizes="auto"
                 src="/fixtures/landscape-16x9-mountains.jpg"
            >
          </replace-with-children>
        </bolt-ratio>
      </bolt-image>
    </div>
    <div class="c-bolt-card__body">
      <p class="c-bolt-eyebrow c-bolt-eyebrow--regular">
        Video
      </p>
      <h3 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--large">
        Anthem: Service Desktop
      </h3>
      <p class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--medium">
        Anthem debuts its next-generation service desktop, driving frictionless customer experiences.
      </p>
    </div>
    <div class="c-bolt-card__footer">
      <div class="c-bolt-card__footer-item">
        <bolt-button size="medium"
                     color="text"
                     width="full"
                     border-radius="regular"
                     align="start"
                     transform="none"
                     url="#!"
        >
          <a href="#!"
             class="c-bolt-button c-bolt-button--medium c-bolt-button--text c-bolt-button--full c-bolt-button--border-radius-regular c-bolt-button--start"
             is="shadow-root"
          >
            <replace-with-children class="c-bolt-button__icon is-empty">
            </replace-with-children>
            <replace-with-children class="c-bolt-button__item">
              Get the report
            </replace-with-children>
            <replace-with-children class="c-bolt-button__icon">
              <bolt-icon slot="after"
                         name="chevron-right"
              >
              </bolt-icon>
            </replace-with-children>
          </a>
        </bolt-button>
      </div>
    </div>
  </figure>
</bolt-card>
`;

exports[`<bolt-card> Component tag variations: section 1`] = `
<bolt-card bolt-component>
  <section class="c-bolt-card">
    <div class="c-bolt-card__media">
      <bolt-image src="/fixtures/landscape-16x9-mountains.jpg"
                  srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                  alt="Anthem Video"
                  sizes="auto"
                  ratio="1151/638"
                  no-lazy
      >
        <bolt-ratio ratio="1151/638">
          <replace-with-children class="c-bolt-ratio"
                                 style="padding-bottom: calc((638 / 1151) * 100%); --aspect-ratio: 1.8040752351097;"
          >
            <img class="c-bolt-image__image-placeholder"
                 alt="Anthem Video"
                 sizes="auto"
                 src="data:image/jpeg;base64,/9j/2wBDAAYEBQYFBAYGBQYHBwYIChAKCgkJChQODwwQFxQYGBcUFhYaHSUfGhsjHBYWICwgIyYnKSopGR8tMC0oMCUoKSj/2wBDAQcHBwoIChMKChMoGhYaKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCj/wAARCAANABgDASIAAhEBAxEB/8QAGAAAAwEBAAAAAAAAAAAAAAAAAAUIBAf/xAAiEAABAwMEAwEAAAAAAAAAAAABAgMEABEhBQcSMRRBwWH/xAAWAQEBAQAAAAAAAAAAAAAAAAAGAQP/xAAeEQABBAEFAAAAAAAAAAAAAAABAAIDESEEFDFRsf/aAAwDAQACEQMRAD8AdaNupMQ8vyZD7x9AgfDanru58goKjFZIVhILxuD+1L8fUZCHEjmTYYz1WlWrykpJ5nPee6VHSxOzSNB07cXa7vM3JkKK+cJCyBezTuftFTxI1N9TgVcBQ9jFFTbx9LUCcjnxf//Z"
            >
            <img class="c-bolt-image__image"
                 alt="Anthem Video"
                 srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                 sizes="auto"
                 src="/fixtures/landscape-16x9-mountains.jpg"
            >
          </replace-with-children>
        </bolt-ratio>
      </bolt-image>
    </div>
    <div class="c-bolt-card__body">
      <p class="c-bolt-eyebrow c-bolt-eyebrow--regular">
        Video
      </p>
      <h3 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--large">
        Anthem: Service Desktop
      </h3>
      <p class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--medium">
        Anthem debuts its next-generation service desktop, driving frictionless customer experiences.
      </p>
    </div>
    <div class="c-bolt-card__footer">
      <div class="c-bolt-card__footer-item">
        <bolt-button size="medium"
                     color="text"
                     width="full"
                     border-radius="regular"
                     align="start"
                     transform="none"
                     url="#!"
        >
          <a href="#!"
             class="c-bolt-button c-bolt-button--medium c-bolt-button--text c-bolt-button--full c-bolt-button--border-radius-regular c-bolt-button--start"
             is="shadow-root"
          >
            <replace-with-children class="c-bolt-button__icon is-empty">
            </replace-with-children>
            <replace-with-children class="c-bolt-button__item">
              Get the report
            </replace-with-children>
            <replace-with-children class="c-bolt-button__icon">
              <bolt-icon slot="after"
                         name="chevron-right"
              >
              </bolt-icon>
            </replace-with-children>
          </a>
        </bolt-button>
      </div>
    </div>
  </section>
</bolt-card>
`;

exports[`<bolt-card> Component theme variations: dark 1`] = `
<bolt-card class="t-bolt-dark"
           bolt-component
>
  <div class="c-bolt-card">
    <div class="c-bolt-card__media">
      <bolt-image src="/fixtures/landscape-16x9-mountains.jpg"
                  srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                  alt="Anthem Video"
                  sizes="auto"
                  ratio="1151/638"
                  no-lazy
      >
        <bolt-ratio ratio="1151/638">
          <replace-with-children class="c-bolt-ratio"
                                 style="padding-bottom: calc((638 / 1151) * 100%); --aspect-ratio: 1.8040752351097;"
          >
            <img class="c-bolt-image__image-placeholder"
                 alt="Anthem Video"
                 sizes="auto"
                 src="data:image/jpeg;base64,/9j/2wBDAAYEBQYFBAYGBQYHBwYIChAKCgkJChQODwwQFxQYGBcUFhYaHSUfGhsjHBYWICwgIyYnKSopGR8tMC0oMCUoKSj/2wBDAQcHBwoIChMKChMoGhYaKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCj/wAARCAANABgDASIAAhEBAxEB/8QAGAAAAwEBAAAAAAAAAAAAAAAAAAUIBAf/xAAiEAABAwMEAwEAAAAAAAAAAAABAgMEABEhBQcSMRRBwWH/xAAWAQEBAQAAAAAAAAAAAAAAAAAGAQP/xAAeEQABBAEFAAAAAAAAAAAAAAABAAIDESEEFDFRsf/aAAwDAQACEQMRAD8AdaNupMQ8vyZD7x9AgfDanru58goKjFZIVhILxuD+1L8fUZCHEjmTYYz1WlWrykpJ5nPee6VHSxOzSNB07cXa7vM3JkKK+cJCyBezTuftFTxI1N9TgVcBQ9jFFTbx9LUCcjnxf//Z"
            >
            <img class="c-bolt-image__image"
                 alt="Anthem Video"
                 srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                 sizes="auto"
                 src="/fixtures/landscape-16x9-mountains.jpg"
            >
          </replace-with-children>
        </bolt-ratio>
      </bolt-image>
    </div>
    <div class="c-bolt-card__body">
      <p class="c-bolt-eyebrow c-bolt-eyebrow--regular">
        Video
      </p>
      <h3 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--large">
        Anthem: Service Desktop
      </h3>
      <p class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--medium">
        Anthem debuts its next-generation service desktop, driving frictionless customer experiences.
      </p>
    </div>
    <div class="c-bolt-card__footer">
      <div class="c-bolt-card__footer-item">
        <bolt-button size="medium"
                     color="text"
                     width="full"
                     border-radius="regular"
                     align="start"
                     transform="none"
                     url="#!"
        >
          <a href="#!"
             class="c-bolt-button c-bolt-button--medium c-bolt-button--text c-bolt-button--full c-bolt-button--border-radius-regular c-bolt-button--start"
             is="shadow-root"
          >
            <replace-with-children class="c-bolt-button__icon is-empty">
            </replace-with-children>
            <replace-with-children class="c-bolt-button__item">
              Get the report
            </replace-with-children>
            <replace-with-children class="c-bolt-button__icon">
              <bolt-icon slot="after"
                         name="chevron-right"
              >
              </bolt-icon>
            </replace-with-children>
          </a>
        </bolt-button>
      </div>
    </div>
  </div>
</bolt-card>
`;

exports[`<bolt-card> Component theme variations: light 1`] = `
<bolt-card class="t-bolt-light"
           bolt-component
>
  <div class="c-bolt-card">
    <div class="c-bolt-card__media">
      <bolt-image src="/fixtures/landscape-16x9-mountains.jpg"
                  srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                  alt="Anthem Video"
                  sizes="auto"
                  ratio="1151/638"
                  no-lazy
      >
        <bolt-ratio ratio="1151/638">
          <replace-with-children class="c-bolt-ratio"
                                 style="padding-bottom: calc((638 / 1151) * 100%); --aspect-ratio: 1.8040752351097;"
          >
            <img class="c-bolt-image__image-placeholder"
                 alt="Anthem Video"
                 sizes="auto"
                 src="data:image/jpeg;base64,/9j/2wBDAAYEBQYFBAYGBQYHBwYIChAKCgkJChQODwwQFxQYGBcUFhYaHSUfGhsjHBYWICwgIyYnKSopGR8tMC0oMCUoKSj/2wBDAQcHBwoIChMKChMoGhYaKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCj/wAARCAANABgDASIAAhEBAxEB/8QAGAAAAwEBAAAAAAAAAAAAAAAAAAUIBAf/xAAiEAABAwMEAwEAAAAAAAAAAAABAgMEABEhBQcSMRRBwWH/xAAWAQEBAQAAAAAAAAAAAAAAAAAGAQP/xAAeEQABBAEFAAAAAAAAAAAAAAABAAIDESEEFDFRsf/aAAwDAQACEQMRAD8AdaNupMQ8vyZD7x9AgfDanru58goKjFZIVhILxuD+1L8fUZCHEjmTYYz1WlWrykpJ5nPee6VHSxOzSNB07cXa7vM3JkKK+cJCyBezTuftFTxI1N9TgVcBQ9jFFTbx9LUCcjnxf//Z"
            >
            <img class="c-bolt-image__image"
                 alt="Anthem Video"
                 srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                 sizes="auto"
                 src="/fixtures/landscape-16x9-mountains.jpg"
            >
          </replace-with-children>
        </bolt-ratio>
      </bolt-image>
    </div>
    <div class="c-bolt-card__body">
      <p class="c-bolt-eyebrow c-bolt-eyebrow--regular">
        Video
      </p>
      <h3 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--large">
        Anthem: Service Desktop
      </h3>
      <p class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--medium">
        Anthem debuts its next-generation service desktop, driving frictionless customer experiences.
      </p>
    </div>
    <div class="c-bolt-card__footer">
      <div class="c-bolt-card__footer-item">
        <bolt-button size="medium"
                     color="text"
                     width="full"
                     border-radius="regular"
                     align="start"
                     transform="none"
                     url="#!"
        >
          <a href="#!"
             class="c-bolt-button c-bolt-button--medium c-bolt-button--text c-bolt-button--full c-bolt-button--border-radius-regular c-bolt-button--start"
             is="shadow-root"
          >
            <replace-with-children class="c-bolt-button__icon is-empty">
            </replace-with-children>
            <replace-with-children class="c-bolt-button__item">
              Get the report
            </replace-with-children>
            <replace-with-children class="c-bolt-button__icon">
              <bolt-icon slot="after"
                         name="chevron-right"
              >
              </bolt-icon>
            </replace-with-children>
          </a>
        </bolt-button>
      </div>
    </div>
  </div>
</bolt-card>
`;

exports[`<bolt-card> Component theme variations: xdark 1`] = `
<bolt-card class="t-bolt-xdark"
           bolt-component
>
  <div class="c-bolt-card">
    <div class="c-bolt-card__media">
      <bolt-image src="/fixtures/landscape-16x9-mountains.jpg"
                  srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                  alt="Anthem Video"
                  sizes="auto"
                  ratio="1151/638"
                  no-lazy
      >
        <bolt-ratio ratio="1151/638">
          <replace-with-children class="c-bolt-ratio"
                                 style="padding-bottom: calc((638 / 1151) * 100%); --aspect-ratio: 1.8040752351097;"
          >
            <img class="c-bolt-image__image-placeholder"
                 alt="Anthem Video"
                 sizes="auto"
                 src="data:image/jpeg;base64,/9j/2wBDAAYEBQYFBAYGBQYHBwYIChAKCgkJChQODwwQFxQYGBcUFhYaHSUfGhsjHBYWICwgIyYnKSopGR8tMC0oMCUoKSj/2wBDAQcHBwoIChMKChMoGhYaKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCj/wAARCAANABgDASIAAhEBAxEB/8QAGAAAAwEBAAAAAAAAAAAAAAAAAAUIBAf/xAAiEAABAwMEAwEAAAAAAAAAAAABAgMEABEhBQcSMRRBwWH/xAAWAQEBAQAAAAAAAAAAAAAAAAAGAQP/xAAeEQABBAEFAAAAAAAAAAAAAAABAAIDESEEFDFRsf/aAAwDAQACEQMRAD8AdaNupMQ8vyZD7x9AgfDanru58goKjFZIVhILxuD+1L8fUZCHEjmTYYz1WlWrykpJ5nPee6VHSxOzSNB07cXa7vM3JkKK+cJCyBezTuftFTxI1N9TgVcBQ9jFFTbx9LUCcjnxf//Z"
            >
            <img class="c-bolt-image__image"
                 alt="Anthem Video"
                 srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                 sizes="auto"
                 src="/fixtures/landscape-16x9-mountains.jpg"
            >
          </replace-with-children>
        </bolt-ratio>
      </bolt-image>
    </div>
    <div class="c-bolt-card__body">
      <p class="c-bolt-eyebrow c-bolt-eyebrow--regular">
        Video
      </p>
      <h3 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--large">
        Anthem: Service Desktop
      </h3>
      <p class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--medium">
        Anthem debuts its next-generation service desktop, driving frictionless customer experiences.
      </p>
    </div>
    <div class="c-bolt-card__footer">
      <div class="c-bolt-card__footer-item">
        <bolt-button size="medium"
                     color="text"
                     width="full"
                     border-radius="regular"
                     align="start"
                     transform="none"
                     url="#!"
        >
          <a href="#!"
             class="c-bolt-button c-bolt-button--medium c-bolt-button--text c-bolt-button--full c-bolt-button--border-radius-regular c-bolt-button--start"
             is="shadow-root"
          >
            <replace-with-children class="c-bolt-button__icon is-empty">
            </replace-with-children>
            <replace-with-children class="c-bolt-button__item">
              Get the report
            </replace-with-children>
            <replace-with-children class="c-bolt-button__icon">
              <bolt-icon slot="after"
                         name="chevron-right"
              >
              </bolt-icon>
            </replace-with-children>
          </a>
        </bolt-button>
      </div>
    </div>
  </div>
</bolt-card>
`;

exports[`<bolt-card> Component theme variations: xlight 1`] = `
<bolt-card class="t-bolt-xlight"
           bolt-component
>
  <div class="c-bolt-card">
    <div class="c-bolt-card__media">
      <bolt-image src="/fixtures/landscape-16x9-mountains.jpg"
                  srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                  alt="Anthem Video"
                  sizes="auto"
                  ratio="1151/638"
                  no-lazy
      >
        <bolt-ratio ratio="1151/638">
          <replace-with-children class="c-bolt-ratio"
                                 style="padding-bottom: calc((638 / 1151) * 100%); --aspect-ratio: 1.8040752351097;"
          >
            <img class="c-bolt-image__image-placeholder"
                 alt="Anthem Video"
                 sizes="auto"
                 src="data:image/jpeg;base64,/9j/2wBDAAYEBQYFBAYGBQYHBwYIChAKCgkJChQODwwQFxQYGBcUFhYaHSUfGhsjHBYWICwgIyYnKSopGR8tMC0oMCUoKSj/2wBDAQcHBwoIChMKChMoGhYaKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCj/wAARCAANABgDASIAAhEBAxEB/8QAGAAAAwEBAAAAAAAAAAAAAAAAAAUIBAf/xAAiEAABAwMEAwEAAAAAAAAAAAABAgMEABEhBQcSMRRBwWH/xAAWAQEBAQAAAAAAAAAAAAAAAAAGAQP/xAAeEQABBAEFAAAAAAAAAAAAAAABAAIDESEEFDFRsf/aAAwDAQACEQMRAD8AdaNupMQ8vyZD7x9AgfDanru58goKjFZIVhILxuD+1L8fUZCHEjmTYYz1WlWrykpJ5nPee6VHSxOzSNB07cXa7vM3JkKK+cJCyBezTuftFTxI1N9TgVcBQ9jFFTbx9LUCcjnxf//Z"
            >
            <img class="c-bolt-image__image"
                 alt="Anthem Video"
                 srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                 sizes="auto"
                 src="/fixtures/landscape-16x9-mountains.jpg"
            >
          </replace-with-children>
        </bolt-ratio>
      </bolt-image>
    </div>
    <div class="c-bolt-card__body">
      <p class="c-bolt-eyebrow c-bolt-eyebrow--regular">
        Video
      </p>
      <h3 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--large">
        Anthem: Service Desktop
      </h3>
      <p class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--medium">
        Anthem debuts its next-generation service desktop, driving frictionless customer experiences.
      </p>
    </div>
    <div class="c-bolt-card__footer">
      <div class="c-bolt-card__footer-item">
        <bolt-button size="medium"
                     color="text"
                     width="full"
                     border-radius="regular"
                     align="start"
                     transform="none"
                     url="#!"
        >
          <a href="#!"
             class="c-bolt-button c-bolt-button--medium c-bolt-button--text c-bolt-button--full c-bolt-button--border-radius-regular c-bolt-button--start"
             is="shadow-root"
          >
            <replace-with-children class="c-bolt-button__icon is-empty">
            </replace-with-children>
            <replace-with-children class="c-bolt-button__item">
              Get the report
            </replace-with-children>
            <replace-with-children class="c-bolt-button__icon">
              <bolt-icon slot="after"
                         name="chevron-right"
              >
              </bolt-icon>
            </replace-with-children>
          </a>
        </bolt-button>
      </div>
    </div>
  </div>
</bolt-card>
`;

exports[`<bolt-card> Component with two buttons in footer 1`] = `
<bolt-card bolt-component>
  <div class="c-bolt-card">
    <div class="c-bolt-card__media">
      <bolt-image src="/fixtures/landscape-16x9-mountains.jpg"
                  srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                  alt="Anthem Video"
                  sizes="auto"
                  ratio="1151/638"
                  no-lazy
      >
        <bolt-ratio ratio="1151/638">
          <replace-with-children class="c-bolt-ratio"
                                 style="padding-bottom: calc((638 / 1151) * 100%); --aspect-ratio: 1.8040752351097;"
          >
            <img class="c-bolt-image__image-placeholder"
                 alt="Anthem Video"
                 sizes="auto"
                 src="data:image/jpeg;base64,/9j/2wBDAAYEBQYFBAYGBQYHBwYIChAKCgkJChQODwwQFxQYGBcUFhYaHSUfGhsjHBYWICwgIyYnKSopGR8tMC0oMCUoKSj/2wBDAQcHBwoIChMKChMoGhYaKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCj/wAARCAANABgDASIAAhEBAxEB/8QAGAAAAwEBAAAAAAAAAAAAAAAAAAUIBAf/xAAiEAABAwMEAwEAAAAAAAAAAAABAgMEABEhBQcSMRRBwWH/xAAWAQEBAQAAAAAAAAAAAAAAAAAGAQP/xAAeEQABBAEFAAAAAAAAAAAAAAABAAIDESEEFDFRsf/aAAwDAQACEQMRAD8AdaNupMQ8vyZD7x9AgfDanru58goKjFZIVhILxuD+1L8fUZCHEjmTYYz1WlWrykpJ5nPee6VHSxOzSNB07cXa7vM3JkKK+cJCyBezTuftFTxI1N9TgVcBQ9jFFTbx9LUCcjnxf//Z"
            >
            <img class="c-bolt-image__image"
                 alt="Anthem Video"
                 srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                 sizes="auto"
                 src="/fixtures/landscape-16x9-mountains.jpg"
            >
          </replace-with-children>
        </bolt-ratio>
      </bolt-image>
    </div>
    <div class="c-bolt-card__body">
      <p class="c-bolt-eyebrow c-bolt-eyebrow--regular">
        Video
      </p>
      <h3 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--large">
        Anthem: Service Desktop
      </h3>
      <p class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--medium">
        Anthem debuts its next-generation service desktop, driving frictionless customer experiences.
      </p>
    </div>
    <div class="c-bolt-card__footer">
      <div class="c-bolt-card__footer-item">
        <bolt-button size="medium"
                     color="text"
                     width="full"
                     border-radius="regular"
                     align="start"
                     transform="none"
                     url="#!"
        >
          <a href="#!"
             class="c-bolt-button c-bolt-button--medium c-bolt-button--text c-bolt-button--full c-bolt-button--border-radius-regular c-bolt-button--start"
             is="shadow-root"
          >
            <replace-with-children class="c-bolt-button__icon is-empty">
            </replace-with-children>
            <replace-with-children class="c-bolt-button__item">
              Get the report
            </replace-with-children>
            <replace-with-children class="c-bolt-button__icon">
              <bolt-icon slot="after"
                         name="chevron-right"
              >
              </bolt-icon>
            </replace-with-children>
          </a>
        </bolt-button>
      </div>
      <div class="c-bolt-card__footer-item">
        <bolt-button size="medium"
                     color="text"
                     width="full"
                     border-radius="regular"
                     align="start"
                     transform="none"
                     url="#!"
        >
          <a href="#!"
             class="c-bolt-button c-bolt-button--medium c-bolt-button--text c-bolt-button--full c-bolt-button--border-radius-regular c-bolt-button--start"
             is="shadow-root"
          >
            <replace-with-children class="c-bolt-button__icon is-empty">
            </replace-with-children>
            <replace-with-children class="c-bolt-button__item">
              Get the second report
            </replace-with-children>
            <replace-with-children class="c-bolt-button__icon">
              <bolt-icon slot="after"
                         name="chevron-right"
              >
              </bolt-icon>
            </replace-with-children>
          </a>
        </bolt-button>
      </div>
    </div>
  </div>
</bolt-card>
`;

exports[`<bolt-card> Component with video in header 1`] = `
<bolt-card bolt-component>
  <div class="c-bolt-card">
    <div class="c-bolt-card__media">
      <bolt-ratio ratio="16/9">
        <replace-with-children class="c-bolt-ratio"
                               style="padding-bottom: calc((9 / 16) * 100%); --aspect-ratio: 1.7777777777778;"
        >
          <bolt-video class="js-bolt-video-uuid--3c"
                      video-id="5609376179001"
                      account-id="1900410236"
                      show-meta
                      player-id="r1CAdLzTW"
                      controls
                      share-description="Share This Video"
          >
          </bolt-video>
        </replace-with-children>
      </bolt-ratio>
    </div>
    <div class="c-bolt-card__body">
      <p class="c-bolt-eyebrow c-bolt-eyebrow--regular">
        Video
      </p>
      <h3 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--large">
        Anthem: Service Desktop
      </h3>
      <p class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--medium">
        Anthem debuts its next-generation service desktop, driving frictionless customer experiences.
      </p>
    </div>
    <div class="c-bolt-card__footer">
      <div class="c-bolt-card__footer-item">
        <bolt-button size="medium"
                     color="text"
                     width="full"
                     border-radius="regular"
                     align="start"
                     transform="none"
                     on-click="toggle"
                     on-click-target="js-bolt-video-uuid--3c"
        >
          <button class="c-bolt-button c-bolt-button--medium c-bolt-button--text c-bolt-button--full c-bolt-button--border-radius-regular c-bolt-button--start"
                  is="shadow-root"
          >
            <replace-with-children class="c-bolt-button__icon is-empty">
            </replace-with-children>
            <replace-with-children class="c-bolt-button__item">
              Play or Pause
            </replace-with-children>
            <replace-with-children class="c-bolt-button__icon">
              <bolt-icon slot="after"
                         name="chevron-right"
              >
              </bolt-icon>
            </replace-with-children>
          </button>
        </bolt-button>
      </div>
    </div>
  </div>
</bolt-card>
`;

exports[`<bolt-card> Component without footer 1`] = `
<bolt-card bolt-component>
  <div class="c-bolt-card">
    <div class="c-bolt-card__media">
      <bolt-image src="/fixtures/landscape-16x9-mountains.jpg"
                  srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                  alt="Anthem Video"
                  sizes="auto"
                  ratio="1151/638"
                  no-lazy
      >
        <bolt-ratio ratio="1151/638">
          <replace-with-children class="c-bolt-ratio"
                                 style="padding-bottom: calc((638 / 1151) * 100%); --aspect-ratio: 1.8040752351097;"
          >
            <img class="c-bolt-image__image-placeholder"
                 alt="Anthem Video"
                 sizes="auto"
                 src="data:image/jpeg;base64,/9j/2wBDAAYEBQYFBAYGBQYHBwYIChAKCgkJChQODwwQFxQYGBcUFhYaHSUfGhsjHBYWICwgIyYnKSopGR8tMC0oMCUoKSj/2wBDAQcHBwoIChMKChMoGhYaKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCj/wAARCAANABgDASIAAhEBAxEB/8QAGAAAAwEBAAAAAAAAAAAAAAAAAAUIBAf/xAAiEAABAwMEAwEAAAAAAAAAAAABAgMEABEhBQcSMRRBwWH/xAAWAQEBAQAAAAAAAAAAAAAAAAAGAQP/xAAeEQABBAEFAAAAAAAAAAAAAAABAAIDESEEFDFRsf/aAAwDAQACEQMRAD8AdaNupMQ8vyZD7x9AgfDanru58goKjFZIVhILxuD+1L8fUZCHEjmTYYz1WlWrykpJ5nPee6VHSxOzSNB07cXa7vM3JkKK+cJCyBezTuftFTxI1N9TgVcBQ9jFFTbx9LUCcjnxf//Z"
            >
            <img class="c-bolt-image__image"
                 alt="Anthem Video"
                 srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
                 sizes="auto"
                 src="/fixtures/landscape-16x9-mountains.jpg"
            >
          </replace-with-children>
        </bolt-ratio>
      </bolt-image>
    </div>
    <div class="c-bolt-card__body">
      <p class="c-bolt-eyebrow c-bolt-eyebrow--regular">
        Video
      </p>
      <h3 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--large">
        Anthem: Service Desktop
      </h3>
      <p class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--medium">
        Anthem debuts its next-generation service desktop, driving frictionless customer experiences.
      </p>
    </div>
    <div class="c-bolt-card__footer">
    </div>
  </div>
</bolt-card>
`;

exports[`<bolt-card> Component without footer and media 1`] = `
<bolt-card bolt-component>
  <div class="c-bolt-card">
    <div class="c-bolt-card__media">
    </div>
    <div class="c-bolt-card__body">
      <p class="c-bolt-eyebrow c-bolt-eyebrow--regular">
        Video
      </p>
      <h3 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--large">
        Anthem: Service Desktop
      </h3>
      <p class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--medium">
        Anthem debuts its next-generation service desktop, driving frictionless customer experiences.
      </p>
    </div>
    <div class="c-bolt-card__footer">
    </div>
  </div>
</bolt-card>
`;
